Changelog
=========


1.4.6 (unreleased)
------------------

- Mopage: fix textlead max length (from 100 to 1000). [jone]

- Fix news item class identifier.
  [Kevin Bieri]


1.4.5 (2016-11-11)
------------------

- Do not show news time. [jone]


1.4.4 (2016-11-10)
------------------

- Fix encoding error in mopage endpoint.
  [jone]


1.4.3 (2016-10-20)
------------------

- Fix chameleon support for mopage export. [jone]


1.4.2 (2016-10-18)
------------------

- Mopage: fix CDATA escaping. [jone]


1.4.1 (2016-09-30)
------------------

- Mopage endpoint: fix entity escaping. [jone]

- Mopage: add custom modified date for tracking content changes. [jone]


1.4.0 (2016-09-26)
------------------

- Mopage trigger: trigger on any update of the news. [jone]

- Mopage endpoint: remove web_url-tag as it is ambiguous. [jone]

- Improve mopage body by using simple HTML. [jone]

- Use simplelayout by default for news folders. [jone]


1.3.1 (2016-09-19)
------------------

- Fix encoding error in mopage. [jone]


1.3.0 (2016-09-13)
------------------

- Implement mopage news trigger behavior. [jone]


1.2.0 (2016-09-07)
------------------

- Fix plone first heading of news listing view on various portal
  types. [mbaechtold]

- Implement "mopage.news.xml" API browser view. [jone]

- Enable IExcludeFromNavigation behavior for news folders. [jone]

- Enable IPublication behavior for news. [jone]


1.1.5 (2016-07-07)
------------------

- Add a wrapper class to the news footer action on the news listing block.
  The news listing portlte allready has one. This makes styling the actions more easier.
  [mathias.leimgruber]


1.1.4 (2016-05-20)
------------------

- Adjusts the formatting of the date and time displayed on the page of a news item.
  Time doesn't show up if it is set to 00:00.
  [raphael-s]

- Archive portlet now respects the config of NewsListingBlock or NewsListing Portlet.
  [mathias.leimgruber]

- Use the query provided by the view for the archive portlet.